fixtures/gate/reject/eq_on_record_with_function.oath
(defn bad [] [(r {f (-> Int Int)})] Bool (== r r))
